# python-grpc-nest-react-ssr

./: .gitignore  BACKEND_CONTEXT.md  CHANGELOG.md  FINAL_TEST_REPORT.md  REACT_SSR_MIGRATION.md  README.md  SETUP_INSTRUCTIONS.md  VERIFICATION.md  package-lock.json  package.json  test-frontend.html
docker/: .gitignore
docs/: NODEJS_GRPC_CLIENT.md  PROTO_CHANGES_GUIDE.md
scripts/: README.md  generate-proto.sh  setup-dev.sh
services/backend-nodejs/: .gitignore  QUICKSTART.md  README.md  SSR_README.md  package-lock.json  package.json  tsconfig.json
services/backend-nodejs/public/css/: styles.css
services/backend-nodejs/src/: app.controller.ts  grpc-client.ts  index.ts  main.ts
services/backend-nodejs/src/grpc/: client.ts
services/backend-nodejs/src/services/: user.service.ts
services/backend-nodejs/src/users/: users.module.ts  users.service.ts
services/backend-nodejs/views/: index.ejs
services/backend-python/: .gitignore  README.md  health_check.py  pyproject.toml  requirements.txt  test_client.py  test_validation.py
services/backend-python/src/: __init__.py  main.py
services/backend-python/src/api/: __init__.py  example_service.py
services/backend-python/src/interceptors/: __init__.py  validation_interceptor.py
services/backend-python/src/utils/: protovalidate_setup.py
services/frontend-typescript/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
services/frontend-typescript/src/: App.css  App.tsx  index.css
shared/proto/: .gitignore  README.md  buf.yaml  example_service.proto
(+6 files in other folders)
